Add active chats handler
