# api/swagger/swagger.yaml
@@ -23,6 +23,13 @@ definitions:
       id:
         type: string
     type: object
+  v1.GetActiveChatsResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   v1.LoginUserRequest:
     properties:
       email:
@@ -39,6 +46,28 @@ info:
   contact: {}
 paths:
   /api/v1/chats:
+    get:
+      description: Prints all active chats id and name
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/v1.GetActiveChatsResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            type: object
+      summary: Get all active chats
+      tags:
+      - Chats
     post:
       consumes:
       - application/json
